update daisy logo to latest version

--- a/user-guide/index.html
+++ b/user-guide/index.html
@@ -9,7 +9,7 @@
 
 	<body class="page">
 		<header>
-			<h1><img src="../images/daisy_logo.png" class="logo" alt="DAISY"/> 
+			<h1><img src="../images/daisy_high.jpg" class="logo" alt="DAISY"/> 
 				<span>Ace <span class="smart_hd">SMART</span> &#8212; User Guide</span></h1>
 			<div class="menubar">&#160;</div>
 		</header>
