--- a/user-guide/configuration.html
+++ b/user-guide/configuration.html
@@ -9,7 +9,7 @@
 
 	<body class="page">
 		<header>
-			<h1><img src="../images/daisy_logo.png" class="logo" alt="DAISY"/> 
+			<h1><img src="../images/daisy_high.jpg" class="logo" alt="DAISY"/> 
 				<span>Ace <span class="smart_hd">SMART</span> &#8212; User Guide</span></h1>
 			<nav class="menubar">
 				<a href="index.html">Table of Contents</a>
