add what's new entry and update version

--- a/new.html
+++ b/new.html
@@ -16,6 +16,14 @@
 				<h2>What's New</h2>
 				
 				<dl>
+					<dt>February 23, 2024 &#8212; Added specification to all reports</dt>
+					<dd>
+						<p>In the generated reports, the version of the EPUB Accessibility specification and WCAG
+							tested against was only reported if the publication passed. This information is now
+							available regardless of the outcome. The specification is also on a separate line from
+							the test status.</p>
+					</dd>
+					
 					<dt>September 21, 2023 &#8212; Updated distribution metadata</dt>
 					<dd>
 						<p>The Distribution metadata tab has been updated to match the new values available in ONIX code list
