update what's new; update version;

--- a/new.html
+++ b/new.html
@@ -16,6 +16,14 @@
 				<h2>What's New</h2>
 				
 				<dl>
+					<dt>May 3, 2024 &#8212; Updated distribution metadata</dt>
+					<dd>
+						<p>The layout of the Distribution tab has been updated to include the descriptions for
+							each onix value. In addition, it is now possible to add a
+							<code>ProductFormFeatureDescription</code> for onix fields that accept additional
+							information.</p>
+					</dd>
+					
 					<dt>March 19, 2024 &#8212; Accessibility metadata wizard</dt>
 					<dd>
 						<p>A new metadata wizard is available for beta testing on the Discovery tab. The wizard
