make evaluation report headers sticky

--- a/new.html
+++ b/new.html
@@ -16,6 +16,12 @@
 				<h2>What's New</h2>
 				
 				<dl>
+					<dt>May 8, 2024 &#8212; Updated report format</dt>
+					<dd>
+						<p>The evaluation reports now have sticky headers so that mouse users do not have to scroll
+							back to the top to change tabs. This change does not affect existing reports.</p>
+					</dd>
+					
 					<dt>May 3, 2024 &#8212; Updated distribution metadata</dt>
 					<dd>
 						<p>The layout of the Distribution tab has been updated to include the descriptions for
