--- a/attribution.html
+++ b/attribution.html
@@ -24,6 +24,7 @@
 				<li>Icons in the revision history are by <a href="https://www.iconfinder.com/flaticondesign">Icon Studio</a>, used under <a href="https://creativecommons.org/licenses/by/3.0/">CC-By 3.0</a>.</li>
 				<li>The "more information" icon is made by <a href="https://www.freepik.com" title="Freepik">Freepik</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a>.</li>
 				<li><a href="https://www.flaticon.com/free-icons/logout" title="logout icons">Logout icons created by th studio - Flaticon</a></li>
+				<li>Icon to generate outputs by <a class="link_pro" href="https://freeicons.io/user-interface-icon-set-24/add-new-create-icon-760833">Marz Gallery</a> on <a href="https://freeicons.io">freeicons.io</a></li>
 			</ul>
 		</main>
 
