initial working code base for new reduced tabs and consolidated metadata; incorporates the a11y viewer code to add display statements to output

--- a/user-guide/discovery.html
+++ b/user-guide/discovery.html
@@ -188,7 +188,7 @@
 		
 		<nav class="user-links">
 			<div class="prev-link"><a href="conformance.html">Conformance Verification</a></div>
-			<div class="next-link"><a href="distribution.html">Distribution Metadata</a></div>
+			<div class="next-link"><a href="evaluation.html">Evaluation Result</a></div>
 		</nav>
 		
 		<footer>
