--- a/user-guide/evaluation.html
+++ b/user-guide/evaluation.html
@@ -80,7 +80,7 @@
 		</main>
 		
 		<nav class="user-links">
-			<div class="prev-link"><a href="distribution.html">Distribution Metadata</a></div>
+			<div class="prev-link"><a href="discovery.html">Discovery Metadata</a></div>
 			<div class="next-link"><a href="generate.html">Generating Reports</a></div>
 		</nav>
 		
