--- a/user-guide/index.html
+++ b/user-guide/index.html
@@ -36,8 +36,7 @@
 						</li>
 						<li>Accessibility Metadata
 							<ol>
-								<li><a href="discovery.html">Discovery Metadata</a></li>
-								<li><a href="distribution.html">Distribution Metadata</a></li>
+								<li><a href="discovery.html">Accessibility Metadata</a></li>
 							</ol>
 						</li>
 						<li><a href="generate.html">Generating Reports</a></li>
