final fixes for the new metadata tab; added partial pass status; updated user guide

--- a/user-guide/configuration.html
+++ b/user-guide/configuration.html
@@ -73,8 +73,7 @@
 					<p>The SMART tool also contains a set of options for further customizing the success criteria
 						to more specific needs</p>
 					
-					<p>To view these options, you must click on the Additional Options link after the configuration
-						settings opens.</p>
+					<p>To view these options, you must click on the Additional Options link.</p>
 					
 					<figure>
 						<figcaption>Figure 3 &#8212; The Additional Options dialog box contains more settings to
