--- a/user-guide/conformance.html
+++ b/user-guide/conformance.html
@@ -121,7 +121,7 @@
 		
 		<nav class="user-links">
 			<div class="prev-link"><a href="configuration.html">Configuring an Evaluation</a></div>
-			<div class="next-link"><a href="discovery.html">Discovery Metadata</a></div>
+			<div class="next-link"><a href="metadata.html">Accessibility Metadata</a></div>
 		</nav>
 		
 		<footer>
