--- a/user-guide/eval-save.html
+++ b/user-guide/eval-save.html
@@ -28,9 +28,9 @@
 				<p>To save your report, click the Save button in the menu bar.</p>
 				
 				<figure>
-					<figcaption>Figure 1 &#8212;  The save button is located under the current login
-						info between the validate and clear buttons.</figcaption>
-					<img src="images/save_button.png" width="300" alt="Save button" />
+					<figcaption>Figure 1 &#8212;  The save button is the image of a floppy disk. It is the third
+						button in the set of application controls.</figcaption>
+					<img src="images/eval_controls.png" width="550" alt="Save button" />
 				</figure>
 				
 				<p>Clicking this button opens a new dialog box to save the evaluation.</p>
@@ -79,7 +79,7 @@
 		</main>
 		
 		<nav class="user-links">
-			<div class="prev-link"><a href="generate.html">Generating Reports</a></div>
+			<div class="prev-link"><a href="generate-metadata.html">Generating Metadata</a></div>
 			<div class="next-link"><a href="eval-history.html">Evaluation History</a></div>
 		</nav>
 		
