remove automatic passing of publications at a lower level than they are being tested against

--- a/new.html
+++ b/new.html
@@ -57,6 +57,19 @@
 							circle) at the top right of the evaluation interface.</p>
 					</dd>
 					
+					<dt>July 4, 2025 &#8212; No more automatic defaulting to lesser compliance statements</dt>
+					<dd>
+						<p>In the past, the SMART tool would automatically adjust the reporting result to claim
+							conformance to WCAG Level A if a publication failed at Level AA. As a result, it was
+							not possible to generate a failure report at Level AA for jurisdications where this
+							level of conformance is required. It could also lead to evaluators missing that the
+							publication was not conforming at the level they had specified.</p>
+						<p>If a publication meets Level A conformance but fails Level AA, all evaluators have
+							to do to create a report at the lower level is switch the setting in the conformance tab.
+							Changing the WCAG version or conformance level does not undo the work you have 
+							completed, so you can always switch back without loss of information.</p>
+					</dd>
+					
 					<dt>May 8, 2024 &#8212; Updated report format</dt>
 					<dd>
 						<p>The evaluation reports now have sticky headers so that mouse users do not have to scroll
